[package]
name = "cyberpixie-app"
version = "0.3.0"
edition = "2021"

[dependencies]
cyberpixie-core = { workspace = true }
cyberpixie-network = { workspace = true }
# embedded-io-async = { workspace = true }
embedded-io = { workspace = true }
heapless = { workspace = true }
log = { workspace = true }
nb = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
cyberpixie-embedded-storage = { workspace = true, features = ["std"] }
cyberpixie-network = { workspace = true, features = ["tokio"] }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
