[package]
name = "cyberpixie"
version = "0.1.0"
edition = "2018"

[dependencies]
embedded-hal = "0.2"
futures = { version = "0.3", default-features = false }
heapless = "0.7"
nb = "1.0"
serde = { version = "1", default-features = false, features = ["derive"] }
smart-leds = "0.3"
void = { version = "1.0", default-features = false }

cyberpixie-proto = { path = "../proto" }
nb-utils = { git = "https://github.com/alekseysidorov/nb-utils.git", branch = "main" }
no-stdout = { git = "https://github.com/alekseysidorov/no-stdout.git", branch = "main" }

[dev-dependencies]
