[package]
name = "cyberpixie-network"
version = "0.3.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cyberpixie-core = { workspace = true }
embedded-io = { workspace = true }
# embedded-io-async = { workspace = true }
# embedded-io-adapters = { workspace = true, optional = true }
heapless = { workspace = true }
log = { workspace = true }
no-std-net = { workspace = true }
smoltcp = { workspace = true, optional = true }
tokio = { workspace = true, features = ["net"], optional = true }

[dev-dependencies]
env_logger = { workspace = true }

[features]
default = []
# std = ["no-std-net/std", "cyberpixie-core/std", "embedded-io-adapters/std"]
# tokio = ["std", "dep:tokio", "embedded-io-adapters/tokio-1"]
std = ["no-std-net/std", "cyberpixie-core/std", "embedded-io/std"]
tokio = ["std", "dep:tokio", "embedded-io/tokio"]
embassy-net = ["dep:smoltcp"]
